presentation box on home page

--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -3,6 +3,7 @@
   margin: 1em auto;
   text-align: center;
   background-color: #EBEDEF;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .app img {
