--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -6,7 +6,9 @@
   border:solid 1px;
   margin:1%;
   padding:3%;
-  background-color: rgb(18, 46, 87, .5);
+  background-color: rgb(18, 46, 87);
+  color:white;
+  text-transform: uppercase;
   border-radius: 10px;
 }
 
