--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -13,6 +13,7 @@
   margin:1%;
   text-align: justify;
   line-height: 30px;
+  border-radius: 10px;
 }
 
 .picture-presentation {
@@ -20,6 +21,7 @@
   background-color: #D6DBDF;
   padding:2%;
   margin:1%;
+  border-radius: 10px;
 }
 
 .picture {
