--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,8 +1,18 @@
-.bloc-navbar {
-  background-color: rgb(254, 207, 6, .5);
+.header-lions {
+  margin: 1%;
+  padding:1%;
 }
 
-.navbar {
+.bloc-navbar-lions {
+  background-color: rgb(254, 207, 6, .5);
+  display:flex;
+  flex-direction: row;
+  max-width: 100%;
+  padding: 2%;
+  border-radius: 10px;
+}
+
+.navbar-lions {
   border:solid 1px;
   margin:1%;
   padding:3%;
@@ -10,8 +20,9 @@
   color:white;
   text-transform: uppercase;
   border-radius: 10px;
+  width: fit-content;
 }
 
-.navbar:hover {
+.navbar-lions:hover {
   zoom: 1.2;
 }
