--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -10,6 +10,12 @@
   max-width: 100%;
   padding: 2%;
   border-radius: 10px;
+  
+}
+.span-nav {
+  margin: 1%;
+  justify-content: space-between;
+  width: 20%;
 }
 
 .navbar-lions {
@@ -20,6 +26,7 @@
   color:white;
   text-transform: uppercase;
   border-radius: 10px;
+ 
   
 }
 
