--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -26,8 +26,11 @@
   color:white;
   text-transform: uppercase;
   border-radius: 10px;
- 
-  
+}
+
+.navbar-lions:checked {
+  background-color: white;
+  color:rgb(18, 46, 87);
 }
 
 .navbar-lions:hover {
