--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -1,11 +1,10 @@
 .app {
 
   height: 100%;
-
   margin: 1em auto;
   text-align: center;
   background-color: #EBEDEF;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 
