Working on the css for members

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -4,7 +4,7 @@
 }
 
 .bloc-navbar-lions {
-  background-color: rgb(254, 207, 6, .5);
+  background-color: #EEC611;
   display:flex;
   flex-direction: row;
   max-width: 100%;
@@ -22,7 +22,7 @@
   border:solid 1px;
   margin:1%;
   padding:10%;
-  background-color: rgb(18, 46, 87);
+  background-color: #00529C;
   color:white;
   text-transform: uppercase;
   border-radius: 10px;
@@ -30,10 +30,11 @@
 
 
 .navbar-lions:hover {
-  zoom: 1.2;
-}
+  background-color: white;
+  color:#00529C;
+} 
 
 .navbar-lions:focus {
   background-color: white;
-  color:rgb(18, 46, 87);
+  color:#00529C;
 }
