--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,6 +1,6 @@
 .footer
 {
-    background-color:#4285F4 ;
+    background-color:#00529C ;
     height: 150px;
     padding: 2%;
     border-radius: 10px;
