wip on the css for the members page

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -19,13 +19,13 @@
 }
 
 .navbar-lions {
-  border:solid 1px;
   margin:1%;
   padding:10%;
   background-color: #00529C;
   color:white;
   text-transform: uppercase;
   border-radius: 10px;
+  border:none;
 }
 
 
