--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,7 +1,7 @@
 .footer
 {
     background-color:#00529C ;
-    height: 150px;
+   
     padding: 2%;
     border-radius: 10px;
     margin: 1%;
@@ -9,9 +9,10 @@
 
 .footer_corp
 {
-    height: 100%;
+
     color: white;
     font-weight: bold;
+    padding:2%;
 };
 
 .footer_mention
@@ -22,7 +23,6 @@
 .footer_link
 {
     display: flex;
-    justify-content: space-evenly;
-    margin-left: 85%;
-    margin-top: 5%;
+    justify-content: center;
+    padding : 1%;
 };
