--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,5 +1,5 @@
 .header-lions {
-  margin: 0%;
+  margin: 0% 0% 2% 0%;
   padding:1%;
 }
 
@@ -8,7 +8,7 @@
   display:flex;
   flex-direction: row;
   max-width: 100%;
-  padding: 21;
+  padding: 2%;
   border-radius: 10px;
   
 }
