--- a/src/components/Club/club.scss
+++ b/src/components/Club/club.scss
@@ -1,3 +1,11 @@
+.club {
+
+    background-color: #D6DBDF;
+    padding:2%;
+    margin:1%;
+    border-radius: 10px;
+}
+
 .paragraph {
     
     box-sizing: border-box;
