change navbar colors sass

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -4,7 +4,7 @@
 }
 
 .bloc-navbar-lions {
-  background-color: #EEC611;
+  background-color: #00529C;
   display:flex;
   flex-direction: row;
   max-width: 100%;
@@ -21,11 +21,12 @@
 .navbar-lions {
   margin:1%;
   padding:10%;
-  background-color: #00529C;
-  color:white;
+  background-color:#EEC611 ;
+  color:#00529C;
   text-transform: uppercase;
   border-radius: 10px;
   border:none;
+  font-weight: bold;
 }
 
 
