--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -10,7 +10,7 @@
   max-width: 100%;
   padding: 2%;
   border-radius: 10px;
-  
+  box-shadow: 3px 3px 20px black;
 }
 .span-nav {
   margin: 1%;
@@ -27,6 +27,8 @@
   border-radius: 10px;
   border:none;
   font-weight: bold;
+  box-shadow: inset 2px 2px 2px #F2E8BA , 3px 3px 20px black;
+ 
 }
 
 
