--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -15,24 +15,44 @@ h1 {
 }
 
 .text-presentation {
-  width: 50%;
+  display: flex;
+  flex-direction: column;
+  width: 130%;
+}
+
+.text1-presentation {
+  flex-direction: column;
+  background-color: #D6DBDF;
+  padding:2%;
+  margin:2%;
+  text-align: left;
+  line-height: 30px;
+  border-radius: 10px;
+  box-shadow:  1px 1px 10px black;
+}
+
+.text2-presentation {
+  flex-direction: column;
   background-color: #D6DBDF;
   padding:2%;
   margin:1%;
   text-align: left;
   line-height: 30px;
   border-radius: 10px;
+  box-shadow:  1px 1px 10px black;
+  margin-left: -32%;
+  margin-right: 2%;
+
 }
 
 .picture-presentation {
-  width: 50%;
-  background-color: #D6DBDF;
-  padding:2%;
+  width: 40%;
   margin:1%;
-  border-radius: 10px;
+  margin-top: -3%;
 }
 
 .picture {
   max-width: 100%;
   max-height: 100%;
+  
 }
