foire au gras page

--- a/src/components/Club/club.scss
+++ b/src/components/Club/club.scss
@@ -15,7 +15,7 @@
     text-align:center;
     justify-content: center;
     padding: 1%;
-    color:#25527A;
+    color:black;
     box-shadow: 3px 3px 3px #25527a;
     margin:1%;
 }
