--- a/src/components/Evt/evtPage/evt.scss
+++ b/src/components/Evt/evtPage/evt.scss
@@ -16,7 +16,7 @@
 .go-back:hover {
     background: radial-gradient(circle, rgba(255,207,1,1) 0%, rgba(147,126,47,1) 150%);
     color:#00529C;
-    transform: rotateY(180deg);
+
   } 
 
  .bandeau-foire-gras {
@@ -26,6 +26,12 @@
  }
  .bandeau-vide-commode {
     box-sizing: content-box;
-    width: 20%;
-    
+    width: 20%;  
+ }
+
+ .bloc-foire-gras {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    color: black;
  }
