--- a/src/components/Club/club.scss
+++ b/src/components/Club/club.scss
@@ -1,21 +1,36 @@
 .club {
 
-    background-color: #D6DBDF;
-    padding:2%;
-    margin:1%;
+    background-color: #d6dbdf;
+    padding: 2%;
+    margin: 1%;
     border-radius: 10px;
+    width: auto;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
+.club_title
+{
+    color: #00529c;
+    font-weight: 700;
+    margin: 1%;
+    text-align: center;
+};
+
 .paragraph {
-    
     box-sizing: border-box;
-    border-radius: 10px; 
-    background-color: rgba(255,255,255,0.52);   
+    border-radius: 10px;
+    background-color: hsla(0,0%,100%,.52);
     border: none;
-    text-align:center;
+    height: 300px;
+    text-align: center;
+    line-height: 1.5;
     justify-content: center;
     padding: 1%;
-    color:black;
+    color: #000;
     box-shadow: 3px 3px 3px #25527a;
-    margin:1%;
+    margin: 1%;
+    width: 48%;
 }
