--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -35,4 +35,22 @@ span:before {content:" "; display: block; }
 
 .form-content {
     justify-content: center;
+    width: 100%;
+}
+
+input {
+    border-radius: 5px;  
+    border: 2px solid #00529c;
+    border-radius: 25px;
+    margin: 1rem;
+    box-sizing: border-box;
+    border-radius: 10px; 
+    background-color: rgba(255,255,255,0.52);   
+    border: none;
+    text-align:center;
+    justify-content: center;
+    padding: 1%;
+    color:black;
+    box-shadow: 3px 3px 3px #25527a;
+    margin:1%; 
 }
