--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -38,7 +38,7 @@ span:before {content:" "; display: block; }
     width: 100%;
 }
 
-input {
+input, textarea {
     border-radius: 5px;  
     border: 2px solid #00529c;
     border-radius: 25px;
