--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -55,6 +55,22 @@ input, textarea {
     margin:1%; 
 }
 
-button {
-    
+.send {
+    width: 100px;
+    height: 40px;  
+    margin:1%;
+    padding:1%;
+    background: radial-gradient(circle, rgba(0,82,156,1) 0%, rgba(19,54,85,1) 130%);
+    color:white;
+    text-transform: uppercase;
+    border-radius: 10px;
+    border:none;
+    font-weight: bold;
+    box-shadow:  3px 3px 20px black;   
 }
+
+.send:hover {
+    background: radial-gradient(circle, rgba(255,207,1,1) 0%, rgba(147,126,47,1) 150%);
+    color:#00529C;
+
+  } 
