--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -53,9 +53,12 @@ h2 {
 }
 
 .picture-presentation {
-  width: 40%;
-  margin:1%;
-  margin-top: -3%;
+  width: 100%;
+  height: 100%;
+}
+
+.lions-paradou {
+  justify-content: space-between;
 }
 
 .picture {
