--- a/src/components/Members/members.scss
+++ b/src/components/Members/members.scss
@@ -29,8 +29,19 @@
 .card_img
 {
     border-radius: 1rem;
-    width: 60%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+
 };
+
+.card_img:hover {
+    border-radius: 1rem;
+    width: 200px;
+    height: auto;
+    zoom: 2;
+}
+
 
 .card_function
 {
