change css form in contact

--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -38,6 +38,8 @@ span:before {content:" "; display: block; }
     justify-content: center;
     width: 100%;
     background-color: #d6dbdf;
+    margin: 1%;
+    border-radius: 10px;
 }
 
 input, textarea {
