adjust club page

--- a/src/components/Club/club.scss
+++ b/src/components/Club/club.scss
@@ -34,3 +34,19 @@
     margin: 1%;
     width: 48%;
 }
+.alpilles-logo {
+    float: left;
+    height: 300px;
+    margin-right: 2%;
+}
+
+.p1-club {
+    margin-top: 100px;
+/*     text-align: justify; */
+}
+
+.club-logo {
+    float: right;
+    width: 180px;
+    height: 180px;
+}
