last changes of the day

--- a/src/components/Evt/evtPage/evt.scss
+++ b/src/components/Evt/evtPage/evt.scss
@@ -34,9 +34,10 @@
  }
 
  .picture-foire {
-   width: 200px;
+   width: 300px;
    height: 200px;
    object-fit: cover;
+   border-radius: 10px;
    
  }
 
