--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -64,10 +64,10 @@ h2 {
 .picture {
   /* max-width: 100%; */
   width: 200px;
-  float: left;
+  justify-content: space-between;
   /* max-height: 100%; */
   margin-left: 1rem;
-  padding-bottom: 5%;
+  padding-bottom: 1%;
 }
 
 /*
