addition of a confirmation message

--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -97,3 +97,10 @@ textarea {
     right: 0;
     transform-origin: 50% 50%;
 };
+
+.form-message
+{
+    width: 20%;
+    margin: 1rem auto;
+    border-radius: 10px;
+};
