add  picture in club meeting section

--- a/src/components/Club/club.scss
+++ b/src/components/Club/club.scss
@@ -50,3 +50,18 @@
     width: 180px;
     height: 180px;
 }
+
+.image-reunion {
+
+}
+
+.text-reunion {
+
+}
+
+.reunion {
+    float: right;
+    width: 180px;
+    height: 180px;
+    object-fit: cover;
+}
